overflow fix

--- a/src/assets/styles/components/notes.less
+++ b/src/assets/styles/components/notes.less
@@ -36,6 +36,9 @@
 .notes_inner {
   display: flex;
   flex-wrap: wrap;
+  max-height: 100%;
+  overflow: auto;
+  margin-bottom: 10px;
 }
 
 .notes_empty {
